@@ -70,7 +70,10 @@ struct _AgsSoundcardEditor
   GtkCheckButton *use_cache;
   GtkSpinButton *cache_buffer_size;
 
+  GtkLabel *wasapi_share_mode_label;
   GtkComboBoxText *wasapi_share_mode;
+
+  GtkLabel *wasapi_buffer_size_label;
   GtkSpinButton *wasapi_buffer_size;
   
   GtkButton *remove;
@@ -99,6 +102,9 @@ void ags_soundcard_editor_load_jack_card(AgsSoundcardEditor *soundcard_editor);
 void ags_soundcard_editor_load_wasapi_card(AgsSoundcardEditor *soundcard_editor);
 void ags_soundcard_editor_load_alsa_card(AgsSoundcardEditor *soundcard_editor);
 void ags_soundcard_editor_load_oss_card(AgsSoundcardEditor *soundcard_editor);
+
+void ags_soundcard_editor_show_wasapi_control(AgsSoundcardEditor *soundcard_editor);
+void ags_soundcard_editor_hide_wasapi_control(AgsSoundcardEditor *soundcard_editor);
 
 AgsSoundcardEditor* ags_soundcard_editor_new();
 
